# my-travel-in-learning-python

./: .gitignore  README.md  proxy.py
2dCollision/: main.py  readme.md  readme.txt
asyc_db_server/: main.py  readme.md
async_io/: Untitled.ipynb  async.org  readme.md  test.py  test_asyncio.py
async_queue/: readme.md  simple_pool.py  simple_queue.py  tasks.py
blockchain/: .flake8  .pre-commit-config.yaml  main.py  pyproject.toml  readme.md
blockchain/blockchain/: block.py  chain.py  p2p_server.py
blockchain/tests/: block_test.py  transaction_pool_test.py  transaction_test.py  wallet_test.py
blockchain/wallet/: transaction.py  transaction_pool.py  wallet.py  wallet_tx.py
chase_or_chat/: db.sqlite3  manage.py  mydb  readme.md  tt.txt
cheatsheet/: daemon_thread.py
cli_chatroom/: chatroom.py  console.py  multiConsole.py  readme.md  readme.txt
cloudflare/: main.py
databaseProject/: DataBase.py  Database.xml  exampleTest.xml  main.py  readme.md  setup.py  sqlAnalyzer.py  sqlParser.py
django_zoo/: manage.py  readme.md  requirements.txt
imageCropper/: main.py  readme.md  readme.txt
imageDisplayer/: main.py  readme.md  readme.txt  view.py  view.ui
invisible_crawler/: Dockerfile  docker-compose.yml  example.py  readme.md
kube_cli/: main.py  readme.md
python_byte_code/: Untitled.ipynb
shared_memory/: main.py
testJinja2/: a.html  b.html  base.html  blog.css  blog.html  home.html  main.css  readme.md
ufile_transfer/: image_downloader.py  main.py  parser.py  readme.md  requirement.txt  source_map.py  updater.py  uploader.py
(+72 files in other folders)
